--- a/src/app/modules/race/components/comp-race-lights/comp-race-lights.component.scss
+++ b/src/app/modules/race/components/comp-race-lights/comp-race-lights.component.scss
@@ -42,4 +42,12 @@
       rgba(48, 255, 0, 1) 100%
     );
   }
+  [class*="led"].w {
+    background: rgb(255, 255, 255);
+    background: radial-gradient(
+      circle,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(150, 150, 150, 1) 100%
+    );
+  }
 }
