--- a/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
+++ b/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
@@ -3,28 +3,54 @@
     <div
       class="card-body d-flex justify-content-between align-items-center flex-wrap"
     >
-      <div>
+      <!-- <div>
         <button class="btn btn-primary">
           <i class="fa fa-map-o"></i>
           <span> SELECT TRACK</span>
         </button>
+      </div> -->
+
+      <div class="btn-group me-2">
+        <span *ngIf="race.status == 'releasing'">Lights ON!</span>
+
+        <button
+          *ngIf="race.status == 'reseted'"
+          class="btn btn-success"
+          (click)="action('start')"
+        >
+          <i class="fa fa-play"></i>
+          <span> Start</span>
+        </button>
+
+        <button
+          *ngIf="race.status == 'stopped'"
+          class="btn btn-info"
+          (click)="action('resume')"
+        >
+          <i class="fa fa-play"></i>
+          <span> Resume</span>
+        </button>
+
+        <button
+          *ngIf="race.status == 'started'"
+          class="btn btn-danger"
+          (click)="action('stop')"
+        >
+          <i class="fa fa-square"></i>
+          <span> Stop</span>
+        </button>
+
+        <button
+          *ngIf="race.status == 'finished' || race.status == 'stopped'"
+          class="btn btn-purple"
+          (click)="action('reset')"
+        >
+          <i class="fa fa-times"></i>
+          <span> Reset</span>
+        </button>
       </div>
 
       <div>
-        <div class="btn-group me-2">
-          <button class="btn btn-purple" (click)="start()">
-            <i class="fa fa-play"></i>
-          </button>
-
-          <button class="btn btn-purple" (click)="stop()">
-            <i class="fa fa-square"></i>
-          </button>
-
-          <button class="btn btn-purple" (click)="reset()">
-            <i class="fa fa-times"></i>
-          </button>
-        </div>
-
         <button class="btn btn-secondary" (click)="numberOfPlayers()">
           <span *ngIf="race.config.players == 1"> 1 Player</span>
           <span *ngIf="race.config.players == 2"> 2 Players</span>
