--- a/src/app/modules/race/components/comp-race-select-player-modal/comp-race-select-player-modal.component.html
+++ b/src/app/modules/race/components/comp-race-select-player-modal/comp-race-select-player-modal.component.html
@@ -13,7 +13,7 @@
       <div class="modal-header">
         <h5 class="modal-title" id="addCarModal">
           <i class="fa fa-user"></i>
-          <span> SELECT {{ playerSelected }}</span>
+          <span> SELECT PLAYER {{ playerSelected + 1 }}</span>
         </h5>
         <button
           type="button"
