--- a/src/app/modules/race/components/comp-race-player/comp-race-player.component.scss
+++ b/src/app/modules/race/components/comp-race-player/comp-race-player.component.scss
@@ -1,5 +1,6 @@
 .card {
   width: 100%;
+  height: 100px;
   flex-direction: row;
   align-items: center;
   cursor: pointer;
@@ -85,6 +86,7 @@
 @media screen and (max-width: 576px) {
   .card {
     flex-wrap: wrap;
+    height: 60px;
 
     &-image-car {
       height: 60px;
