--- a/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
+++ b/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
@@ -1,18 +1,21 @@
 <div class="card mt-4">
   <div class="list-group list-group-flush">
     <div
-      *ngFor="let lap of lapsList.reverse(); let i = index"
-      class="list-group-item d-flex justify-content-between align-center"
+      *ngFor="let lap of player.laps.reverse(); let i = index"
+      class="list-group-item d-flex justify-content-between align-items-center"
       [ngClass]="{
         'bg-danger': worstLap == lap,
         'bg-purple': bestLap == lap
       }"
     >
-      <div class="d-flex">
-        <span class="d-none d-sm-block">LAP&nbsp;</span>
-        <span>{{ lapsList.length - i }}</span>
+      <div class="d-flex justify-content-between align-items-center">
+        <span class="d-none d-sm-block"> LAP&nbsp;</span>
+        <span>{{ player.laps.length - i }}</span>
       </div>
-      <span class="fw-bold">{{ lap | time }}</span>
+      <div>
+        <span class="fw-bold">{{ lap | time }}</span>
+        <i class="fa fa-trash ms-2 small cursor-pointer" (click)="delete(player.laps.length - 1 - i)"></i>
+      </div>
     </div>
   </div>
 </div>
