--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,10 @@ body {
   font-family: "Fredoka", sans-serif;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 textarea:hover,
 input:hover,
 textarea:active,
