delete lap style

--- a/src/app/modules/race/race.component.html
+++ b/src/app/modules/race/race.component.html
@@ -1,8 +1,10 @@
-<div class="d-flex justify-content-center mb-4">
+<div class="d-flex justify-content-between align-items-center mb-4">
   <app-comp-race-lights
     [lights]="lights"
     (changeStatus)="raceStatus($event)"
   ></app-comp-race-lights>
+
+  <app-comp-race-fastest-lap [fast]="fast"></app-comp-race-fastest-lap>
 </div>
 
 <div class="mb-4">
@@ -11,10 +13,6 @@
     (raceAction)="raceAction($event)"
     (raceConfig)="raceConfig($event)"
   ></app-comp-race-navbar>
-</div>
-
-<div class="mb-4">
-  <app-comp-race-fastest-lap [fast]="fast"></app-comp-race-fastest-lap>
 </div>
 
 <div class="row mb-4">
