--- a/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
+++ b/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
@@ -8,13 +8,16 @@
         'bg-purple': bestLap == lap
       }"
     >
+      <div class="delete-lap" (click)="delete(player.laps.length - 1 - i)">
+        <i class="fa fa-trash me-2 small cursor-pointer"></i>
+        <span>DELETE LAP</span>
+      </div>
       <div class="d-flex justify-content-between align-items-center">
         <span class="d-none d-sm-block"> LAP&nbsp;</span>
         <span>{{ player.laps.length - i }}</span>
       </div>
       <div>
         <span class="fw-bold">{{ lap | time }}</span>
-        <i class="fa fa-trash ms-2 small cursor-pointer" (click)="delete(player.laps.length - 1 - i)"></i>
       </div>
     </div>
   </div>
