--- a/src/app/components/comp-main-sidebar/comp-main-sidebar.component.scss
+++ b/src/app/components/comp-main-sidebar/comp-main-sidebar.component.scss
@@ -1,10 +1,11 @@
 .sidebar {
   width: 250px;
   height: 100vh;
-  background-color: #ccc;
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  left: -250px;
+  // left: -250px;
   top: 0;
+  z-index: 1000;
   transition: all 0.2s ease-in-out;
 }
 
