--- a/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
+++ b/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
@@ -9,16 +9,16 @@
         </button>
       </div> -->
 
-    <span *ngIf="race.status == 'releasing'">Lights ON!</span>
+    <span *ngIf="race.status == 'releasing'" class="ms-2 mt-2">Lights ON!</span>
 
     <div>
       <button
         *ngIf="race.status == 'stopped'"
-        class="btn btn-success ms-2 mt-2"
+        class="btn btn-sm btn-success ms-2 mt-2"
         (click)="action('start')"
       >
         <i class="fa fa-play"></i>
-        <span> Start</span>
+        <span> Start Race</span>
       </button>
 
       <button
@@ -27,7 +27,7 @@
           race.status == 'free' ||
           race.status == 'finished'
         "
-        class="btn btn-danger ms-2 mt-2"
+        class="btn btn-sm btn-danger ms-2 mt-2"
         (click)="action('stop')"
       >
         <i class="fa fa-square"></i>
@@ -36,7 +36,7 @@
 
       <button
         *ngIf="race.status == 'stopped'"
-        class="btn btn-purple ms-2 mt-2"
+        class="btn btn-sm btn-info ms-2 mt-2"
         (click)="action('free')"
       >
         <i class="fa fa-play"></i>
@@ -46,25 +46,27 @@
 
     <div class="d-flex">
       <div class="btn-group ms-2 mt-2">
-        <button class="btn btn-info" (click)="config('laps', -1)">
+        <button class="btn btn-sm btn-secondary" (click)="config('laps', -1)">
           <i class="fa fa-minus"></i>
         </button>
-        <button class="btn btn-info" style="pointer-events: none">
-          {{ race.laps }} Laps
+        <button class="btn btn-sm btn-secondary" style="pointer-events: none">
+          <span>{{ race.laps }} </span>
+          <i class="fa fa-road"></i>
         </button>
-        <button class="btn btn-info" (click)="config('laps', 1)">
+        <button class="btn btn-sm btn-secondary" (click)="config('laps', 1)">
           <i class="fa fa-plus"></i>
         </button>
       </div>
 
       <div class="btn-group ms-2 mt-2">
-        <button class="btn btn-secondary" (click)="config('players', -1)">
+        <button class="btn btn-sm btn-secondary" (click)="config('players', -1)">
           <i class="fa fa-minus"></i>
         </button>
-        <button class="btn btn-secondary" style="pointer-events: none">
-          {{ race.players.length }} Players
+        <button class="btn btn-sm btn-secondary" style="pointer-events: none">
+          <span>{{ race.players.length }} </span>
+          <i class="fa fa-male"></i>
         </button>
-        <button class="btn btn-secondary" (click)="config('players', 1)">
+        <button class="btn btn-sm btn-secondary" (click)="config('players', 1)">
           <i class="fa fa-plus"></i>
         </button>
       </div>
