--- a/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
+++ b/src/app/modules/race/components/comp-race-list-lap/comp-race-list-lap.component.html
@@ -1,6 +1,15 @@
 <div class="card mt-4">
   <div class="list-group list-group-flush">
     <div
+      class="list-group-item d-flex justify-content-between align-items-center"
+    >
+      <div class="d-flex justify-content-between align-items-center">
+        <span class="d-none d-sm-block"> LAP&nbsp;</span>
+        <span>{{ player.laps.length + 1 }}</span>
+      </div>
+      <race-chronometer [laps]="player.laps"></race-chronometer>
+    </div>
+    <div
       *ngFor="let lap of player.laps.reverse(); let i = index"
       class="list-group-item d-flex justify-content-between align-items-center"
       [ngClass]="{
